--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ img{
 }
 #img-boy{
     position: relative;
+    cursor: pointer;
 }
 #arrow-right{
     -moz-transform: scaleX(-1);
@@ -13,15 +14,9 @@ img{
     -ms-filter: "FlipH";
 }
 #arrow-top{
-    -moz-transform: scaleY(-1);
-    -o-transform: scaleY(-1);
-    -webkit-transform: scaleY(-1);
-    transform: scaleX(-1);    
+    transform: rotate(90deg);
 }
 
 #arrow-bottom{
-    -moz-transform: scaleY(-1);
-    -o-transform: scaleY(-1);
-    -webkit-transform: scaleY(-1);
-    transform: scaleX(-1);    
+    transform: rotate(270deg);
 }
