--- a/css/styles.css
+++ b/css/styles.css
@@ -87,3 +87,12 @@ img{
 #arrow-bottom{
     transform: rotate(270deg);
 }
+
+#point-red{
+    background:red;
+    height:10px;
+    width:10px;
+}
+
+
+
