--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,23 @@ img{
     height:10px;
     width:10px;
 }
+.nav-background{
+    background: #363636;
+    opacity: .9;
+}
+a.nav-item{
+    color: #ffffff;
+    font-weight: bolder;
+}
+a.nav-item:hover{
+    color: rgba(255, 255, 255, 0.616)
+}
+.img-logo{
+    margin-right: 10px;
+}
+.title-game{
+    font-weight: 600;
+}
 
 
 
