--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ img{
     background:red;
     height:10px;
     width:10px;
+    border-radius: 50%;
 }
 .nav-background{
     background: #363636;
